--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Tasks#index</h1>
 <p>Find me in app/views/tasks/index.html.erb</p>
- <%= javascript_pack_tag "hello_vue" %>
+<%= javascript_pack_tag "hello_vue" %>
+<%= javascript_pack_tag "hello_typescript" %>
